code: basic frontend layout done :+1:

--- a/index.html
+++ b/index.html
@@ -4,9 +4,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title></title>Talk Bananas 🍌 </title>
+    <link rel="stylesheet" href="./style.css">
+    <title>Talk Bananas</title>
+
 </head>
 <body>
     <h1> Talk Bananas</h1>
+    <textarea id="text-input" placeholder="Enter your text in English and we'll do the rest"></textarea>
+    <button id="translate-btn">Click Me</button>
+    <div id="Heading">Ouput will be shown here 👇</div>
+    <div id="output"></div>
+    <script src="./script.js" type="text/javascript">  </script>
 </body>
 </html>
