--- a/index.html
+++ b/index.html
@@ -1,19 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./style.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./style.css" />
     <title>Talk Bananas</title>
-
-</head>
-<body>
-    <h1> Talk Bananas</h1>
-    <textarea id="text-input" placeholder="Enter your text in English and we'll do the rest"></textarea>
-    <button id="translate-btn">Click Me</button>
-    <div id="Heading">Ouput will be shown here 👇</div>
-    <div id="output"></div>
-    <script src="./script.js" type="text/javascript">  </script>
-</body>
+  </head>
+  <body>
+    <div class="heading">
+      <h1>We talk bananas!!!</h1>
+    </div>
+    <div class="container">
+      <textarea
+        id="text-input"
+        placeholder="Enter your text in English and we'll do the rest"
+      ></textarea>
+      <button id="translate-btn">Click Me</button>
+      <p>Output will be shown here 👇</p>
+      <div id="output"></div>
+    </div>
+    <div class="about">
+      <p class="center">
+        Are you a fan of minions? Did you know that the gibberish they say is an
+        actual language. Use the translator to convert your text from English to
+        Minion speak or Banana language.
+      </p>
+    </div>
+    <script src="./script.js" type="text/javascript"></script>
+  </body>
 </html>
