code: CSS added :100:

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div class="container">
       <textarea
         id="text-input"
-        placeholder="Enter your text in English and we'll do the rest"
+        placeholder="Enter your text in English and we'll do the rest! "
       ></textarea>
       <button id="translate-btn">Click Me</button>
       <p>Output will be shown here 👇</p>
